# social-science-research-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.opencode/agents/: skill-implementer.md  skill-orchestrator.md  skill-reviewer.md
docs/: architecture-dependencies.md
scripts/: install.py
skills/implement-review-fix-workflow/: SKILL.md
skills/literature-search-repec/: SKILL.md
skills/manage-latex-bibliography/: SKILL.md
skills/rename-and-organize-references/: SKILL.md
skills/skill-development-workflow/: SKILL.md
skills/summarize-academic-paper/: SKILL.md
tests/: conftest.py  test_dependencies.py  test_install.py  test_scaffold.py  test_skill_structure.py
tests/implement_review_fix_workflow/: test_runner.py
tests/literature_search_repec/: test_repec_scripts.py
tests/manage_latex_bibliography/: test_aea_download.py  test_apply.py  test_bibtex.py  test_proposal.py  test_tex_scan.py  test_verify_existing.py
tests/rename_and_organize_references/: test_apply.py  test_mapping.py  test_name_format.py  test_naming.py  test_propose.py
tests/skill_development_workflow/: test_runner.py
tests/summarize_paper/: test_extract_captions.py  test_extract_metadata.py  test_extract_text.py  test_extract_warnings.py  test_fetch_doi.py  test_fetch_io.py  test_fetch_local.py  test_fetch_url.py  test_render_citations.py  test_render_rubric.py  test_render_schema.py  test_render_slots.py  test_render_visual_image.py  test_render_visual_none.py  test_render_visual_table.py  test_template_defaults.py
(+24 files in other folders)
