[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "social-science-research-skills"
version = "0.2.1"
description = "Portable Agent Skills for social science research workflows"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=5.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]
render = [
  "pymupdf>=1.24",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
